_sass/_layout.scss
// ==========================================
//  Layout.scss
// ==========================================

.secondary-bkg {
  background: $gray-extra-light;
}

.img-bkg {
  background: url('../img/country-road.jpg') no-repeat center bottom;
  padding: rem-calc(95) $gutter-split rem-calc(120) $gutter-split;
  max-height: rem-calc(450);

  .feature-header,
  .feature-subheader {
    color: $white;
  }
}

.page-content {
  margin: 0 auto;
  padding: $column-gutter $column-gutter $gutter-extra-large;
  max-width: $max-content-width;

  & > section {
    padding: $gutter-large 0; 
    text-align: center;

    .feature-subheader {
      max-width: rem-calc(750);
    }
  }
}

.page-content-header {
  padding-bottom: $column-gutter;
  margin-bottom: $column-gutter;
  border-bottom: 1px solid $gray-light;
}

